New screen search text box pending test cases