@@ -81,8 +81,8 @@ public class baseclass {
 			 
 				
 			 
-			 driver = new AndroidDriver(new URI("http://127.0.0.1:4723").toURL(),options);
-			 //private static AppiumDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723"), options);
+			   driver = new AndroidDriver(new URI("http://127.0.0.1:4723").toURL(),options);
+			// private static AppiumDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723"), options);
 				driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(60));
 				
 
